--- a/docs/src/content/docs/keybindings/tmux.mdx
+++ b/docs/src/content/docs/keybindings/tmux.mdx
@@ -32,10 +32,16 @@ A comprehensive reference of all custom keybindings configured in Tmux.
 
 | Key               | Description                   |
 | ----------------- | ----------------------------- |
-| `Ctrl+Left`       | Previous window               |
-| `Ctrl+Right`      | Next window                   |
 | `prefix + Ctrl+w` | Create new window with prompt |
 | `prefix + Ctrl+,` | Rename current window         |
+| `prefix + &`      | Kill window with prompt       |
+
+## Window Navigation
+
+| Key          | Description     |
+| ------------ | --------------- |
+| `Ctrl+Left`  | Previous window |
+| `Ctrl+Right` | Next window     |
 
 ## Pane Management
 
@@ -43,6 +49,7 @@ A comprehensive reference of all custom keybindings configured in Tmux.
 | ------------- | ----------------------- |
 | `prefix + \|` | Split pane horizontally |
 | `prefix + -`  | Split pane vertically   |
+| `prefix + x`  | Kill pane with prompt   |
 
 ## Pane Navigation
 
