docs: Fix overview-table width on small screens with overflow-x

--- a/docs/src/content/docs/guides/overview.mdx
+++ b/docs/src/content/docs/guides/overview.mdx
@@ -12,8 +12,8 @@ The table below is a comprehensive list of the core components used by this desk
 | **Shell**                | bash                                                                |
 | **Prompt**               | Starship                                                            |
 | **Editor**               | Neovim                                                              |
-| **Font**                 | JetBrainsMono NL                                                   |
-| **Terminal**             | Alacritty                                                           |
+| **Font**                 | JetBrainsMono NL                                                    |
+| **Terminal**             | Alacritty / Kitty                                                   |
 | **Multiplexer**          | Tmux                                                                |
 | **Color Theme**          | Based on [Catppuccin Mocha Palette](https://catppuccin.com/palette) |
 | **Window Manager**       | i3                                                                  |
