--- a/docs/src/content/docs/guides/installation.mdx
+++ b/docs/src/content/docs/guides/installation.mdx
@@ -59,15 +59,34 @@ you will need to provide your own preferences.
 
 ## Post-Installation
 
-Congratulations! You’ve successfully installed everything.
-To ensure your workspace looks and behaves correctly after a reboot, please complete these two quick steps:
+Congratulations! You’ve successfully installed this desktop environment.
+To ensure your workspace looks and behaves correctly after a reboot, please complete the following steps:
 
 ### 1. Optional - Set your wallpaper
 
-By default, i3 looks for its background at `~/Pictures/wallpaper.jpg`. While a default wallpaper is provided,
-you can set your own by overriding it.
+By default, i3 looks for its wallpaper at `~/Pictures/wallpaper.jpg`. While a default one is provided
+with the standalone installer method, you can set your own by overriding it.
 
-### 2. Configure your displays
+### 2. Optional - API Tokens
+
+API access for certain services requires storing authentication token files under
+your home directory.  The provided `.bashrc` exports these variables by reading them
+if they exists and keeps your sensitive keys out of your shell history and configuration files.
+
+The table below outlines the expected filenames conventions:
+
+<div class="overview-table">
+
+| Env var             | Filename             | Purpose                                      |
+| ------------------- | -------------------- | -------------------------------------------- |
+| `GITHUB_TOKEN`      | `~/.GITHUB_TOKEN`    | Github CLI                                   |
+| `TINYURL_TOKEN`     | `~/.TINYURL_TOKEN`   | Bash URL `shortener` alias                   |
+| `GEMINI_API_KEY`    | `~/.GEMINI_TOKEN`    | Gemini CLI and Neovim Avante Gemini provider |
+| `ANTHROPIC_API_KEY` | `~/.ANTHROPIC_TOKEN` | Neovim Avante Claude provider                |
+
+</div>
+
+### 3. Configure your displays
 
 Open your terminal and run the following command once you have your monitors arranged the way you like them:
 
@@ -76,23 +95,6 @@ Open your terminal and run the following command once you have your monitors arr
   `autorandr` was installed as part of the OS baseline. The command above will
   save your monitor setup so i3 will know which settings to apply upon startup.
 </Aside>
-
-### 3. Tokens
-
-API access for certain services requires storing authentication tokens files under
-your home directory.  The provided `.bashrc` exports these variables by reading them
-and keeps your sensitive keys out of your shell history and configuration files.
-
-The table below outlines the expected filenames conventions:
-
-<div class="overview-table">
-| Env var             | Required Filename    | Purpose                                      |
-| ------------------- | -------------------- | -------------------------------------------- |
-| `GITHUB_TOKEN`      | `~/.GITHUB_TOKEN`    | Github CLI                                   |
-| `TINYURL_TOKEN`     | `~/.TINYURL_TOKEN`   | Bash URL shortener alias                     |
-| `GEMINI_API_KEY`    | `~/.GEMINI_TOKEN`    | Gemini CLI and Neovim Avante Gemini provider |
-| `ANTHROPIC_API_KEY` | `~/.ANTHROPIC_TOKEN` | Neovim Avante Claude provider                |
-</div>
 
 ## Further reading
 
