--- a/bin/install
+++ b/bin/install
@@ -250,7 +250,7 @@ base::fonts() {
         curl -fsSL "$NERD_FONTS_RELEASE_BASE_URL/$NERD_FONTS_LATEST_TAG/$NERD_FONT.tar.xz" | tar -C "$SANDBOX/$NERD_FONT" -xJf - || {
             log:error "Couldn't download and extract $NERD_FONT archive"
         }
-        mv "$SANDBOX/$NERD_FONT"/*.ttf "$NERD_FONTS_DESTINATION/$NERD_FONT" && rm -rf "$SANDBOX/${NERD_FONT:?}"
+        mv "$SANDBOX/$NERD_FONT"/* "$NERD_FONTS_DESTINATION/$NERD_FONT" && rm -rf "$SANDBOX/${NERD_FONT:?}"
         fc-cache -f "$NERD_FONTS_DESTINATION/$NERD_FONT"
 
     done
