--- a/bin/install
+++ b/bin/install
@@ -73,7 +73,7 @@ base::tmux() {
     local -r ENTR_REPOSITORY_BASENAME=$(basename $ENTR_REPOSITORY_URL .git)
 
     [[ $(command -v entr) ]] || (
-        git clone --depth 1 --quiet --branch "$ENTR_LATEST_TAG" "$ENTR_REPOSITORY_URL" "$SANDBOX/$ENTR_REPOSITORY_BASENAME" && cd $_ || {
+        git clone --depth 1 --branch "$ENTR_LATEST_TAG" "$ENTR_REPOSITORY_URL" "$SANDBOX/$ENTR_REPOSITORY_BASENAME" &>/dev/null && cd $_ || {
             log::error "Couldn't clone repository: $ENTR_REPOSITORY_URL"
         }
         ./configure && PREFIX=$(dirname $XDG_BIN_HOME) make install &>/dev/null || {
@@ -437,12 +437,12 @@ base::swayfx() {
             SWAYFX_PACKAGES=$(common::dependencies_from "swayfx")
             sudo $PKG_MANAGER install -y $SWAYFX_PACKAGES &>/dev/null
 
-            git clone --depth 1 --quiet --branch "$SWAYFX_REPOSITORY_TAG" "$SWAYFX_REPOSITORY_URL" "$XDG_CACHE_HOME/$SWAYFX_REPOSITORY_BASENAME" && cd $_ || {
+            git clone --depth 1 --branch "$SWAYFX_REPOSITORY_TAG" "$SWAYFX_REPOSITORY_URL" "$XDG_CACHE_HOME/$SWAYFX_REPOSITORY_BASENAME" &>/dev/null && cd $_ || {
                 log::error "Couldn't clone repository: $SWAYFX_REPOSITORY_URL"
             }
 
-            git clone --depth 1 --quiet --branch "$SCENEFX_REPOSITORY_TAG" "$SCENEFX_REPOSITORY_URL" "subprojects/$SCENEFX_REPOSITORY_BASENAME"
-            git clone --depth 1 --quiet --branch "$WLROOTS_REPOSITORY_TAG" "$WLROOTS_REPOSITORY_URL" "subprojects/$WLROOTS_REPOSITORY_BASENAME"
+            git clone --depth 1 --branch "$SCENEFX_REPOSITORY_TAG" "$SCENEFX_REPOSITORY_URL" "subprojects/$SCENEFX_REPOSITORY_BASENAME" &>/dev/null
+            git clone --depth 1 --branch "$WLROOTS_REPOSITORY_TAG" "$WLROOTS_REPOSITORY_URL" "subprojects/$WLROOTS_REPOSITORY_BASENAME" &>/dev/null
 
             meson setup build --prefix "$(dirname $XDG_BIN_HOME)" &>/dev/null
             ninja -C build &>/dev/null && ninja -C build install &>/dev/null || {
@@ -492,7 +492,7 @@ base::i3lock() {
     sudo $PKG_MANAGER install -y $I3LOCK_COLOR_PACKAGES &>/dev/null
 
     (
-        git clone --depth 1 --quiet --branch "$I3LOCK_COLOR_LATEST_TAG" "$I3LOCK_COLOR_REPOSITORY_URL" "$SANDBOX/$I3LOCK_COLOR_REPOSITORY_BASENAME" && cd $_ || {
+        git clone --depth 1 --branch "$I3LOCK_COLOR_LATEST_TAG" "$I3LOCK_COLOR_REPOSITORY_URL" "$SANDBOX/$I3LOCK_COLOR_REPOSITORY_BASENAME" &>/dev/null && cd $_ || {
             log::error "Couldn't clone repository: $I3LOCK_COLOR_REPOSITORY_URL"
         }
         PREFIX=$(dirname $XDG_BIN_HOME) ./install-i3lock-color.sh &>/dev/null
